# sniffy

./: .gitignore  depcheck.sh  deploy.sh  global.h.in  go-builder.py  init_db.sh  main.py  makefile  roster.1731006856.734601.json  run.sh  test.py
api/: go.mod  go.sum  main.go
api/database/: db.go
api/routes/: GET.go  build.go
api/types/: types.go
libsniffy/: CMakeLists.txt
libsniffy/include/: arrest.h
libsniffy/src/: arrest.c  arrest.h  charge.h  errors.h  person.c  person.h
libsniffy/test/: arrest_initialization.c
preprocessor/: a.out  build.rs  compile_commands.json  makefile  test.cpp  test.lua
preprocessor/modules/: README.md  _loader.h  anoka_county.lua  lua_loader.c  module_loader.cpp  module_loader.h  story_county.lua
preprocessor/src/: fac_id.rs  main.rs  roster_logger.rs  scheduler.rs
processor/: makefile
processor/sql/: init_db.sql
processor/src/: arrest.cpp  arrest.hpp  charge.cpp  charge.hpp  database.c  datetimep.h  listener.h  logging.h  main.cpp  person.cpp  person.hpp  processor.cpp  processor.hpp  race.c  race.h  roster.c  roster.h  sex.c  sex.h  socket-handler.cpp  socket-handler.h  status.c  status.h
sniffy/: Cargo.toml  build.rs  deps.md  makefile  test.lua
sniffy-cprocessor/: compile_commands.json  init_db.sql  makefile  sniffy.out
sniffy-cprocessor/src/: arrest.cpp  arrest.hpp  charge.cpp  charge.hpp  database.c  database.h  datetimep.c  datetimep.h  listener.c  logging.c  logging.h  main.cpp  person.cpp  person.hpp  processor.cpp  race.c  roster.c  roster.h  sex.c  socket-handler.cpp  stringification.cpp  stringification.hpp
sniffy/modules/: _loader.h  lua_loader.c  module_loader.cpp  module_loader.h  story_county.lua
sniffy/src/: main.rs  scheduler.rs  stream.rs  test.rs  (+1 more)
sql/: init_db.sql  table_creation.sql  upsert_charge.sql
(+58 files in other folders)
